# wasl

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
src/: __init__.py  errors.py  http.py  server.py
src/tools/: currency.py  hadith.py  hijri.py  names.py  news.py  nlp.py  prayer.py  quran.py  stocks.py  translate.py  weather.py  zakat.py
tests/: test_mocked.py  test_tools.py
